src/components/Table/Table.module.scss
@import "../../styles/variables";
@import "../../styles/normalize";
@import "../../styles/font";

* {
  overflow-x: clip;
}

.container {
  max-width: 1312px;
  width: 100%;
  height: 604px;
  background-color: $bgBlack;
  border-radius: 16px;

  .header {
    display: flex;
    height: 53px;
    line-height: 50px;
    color: $textGrey;

    th {
      font-weight: 400;
    }
  }
}

table {
  width: 99.9%;
  height: 100%;
  padding: 0 0.75rem;
  text-align: left;
  font-size: $text;
  overflow: clip;
}

.tableResponsive {
  width:  100%;
  height: 100%;
  margin-right: 10px;
  white-space: nowrap;
  overflow-x: auto;

  th:nth-child(1), td:nth-child(1) {
    min-width: 260px;
    padding: 0 0.5rem;
  }
  th:nth-child(2), td:nth-child(2) {
    min-width: 139px;
    padding-left: 0.5rem;
  }
  th:nth-child(3), td:nth-child(3) {
    min-width: 270px;
    padding-left: 0.5rem;
  }
  th:nth-child(4), td:nth-child(4) {
    min-width: 89px;
    padding-left: 0.5rem;
  }
  th:nth-child(5), td:nth-child(5) {
    min-width: 100px;
    padding-left: 2.438rem;
  }
  th:nth-child(6), td:nth-child(6) {
    min-width: 102px;
    padding-left: 0.5rem;
  }
  th:nth-child(7), td:nth-child(7) {
    min-width: 132px;
    padding-left: 0.5rem;
  }
}

.row {
  box-sizing: border-box;
  display: flex;
  height: 53px;
  padding: 0 8px;
  border-radius: 12px;
  border: 1px solid rgba(207, 123, 90, 0.2);
  background-color: $buttonBgBlack;

  .profile{
    display: flex;

    .imgContainer {
      display: flex;
      justify-content: center;
      align-items: center;
      margin-right: 13px;

      img {
        box-sizing: border-box;
        width: 36px;
        height: 36px;
        border: 2px solid $orange;
        border-radius: 50%;
      }
    }

  }

  p {
    display: flex;
    align-items: center;
    font-weight: 600;
    color: $white;
  }

  td {
    display: flex;
    align-items: center;
  }
}

.centerBlock {
  display: flex;
  justify-content: center;
  margin-top: 200px;
}

.centerText {
  color: $white;
  font-size: 1.5rem;
  font-weight: 600;
}

.scroll {
  scrollbar-color: #d4aa70 #e4e4e4;
  scrollbar-width: thin;
}

.scroll::-webkit-scrollbar {
  width: 5px;
}

.scroll::-webkit-scrollbar-track {
  background-color: #8C8988;
  border-radius: 100px;
}

.scroll::-webkit-scrollbar-thumb {
  border-radius: 100px;
  background-color: $bodyBlack;
  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.1);
}

